# triton_learn

./: .gitignore  Makefile  README.md  index.html  preview-manifest.json  pyproject.toml
benchmarks/: softmax_bench.py  vector_add_bench.py
docs/architecture/: final-project-overview.md  repository-layout.md
docs/concepts/: glossary-gpu-basics.md  glossary-triton-basics.md  grid-program-id-offset-mask.md  numerical-stability-in-softmax.md  tiling-blocking-and-data-reuse.md  when-to-look-at-ir-ptx-asm.md
docs/phase-guides/: phase-0-bootstrap-and-gpu-foundations.md  phase-1-elementwise-kernel-fundamentals.md  phase-2-reduction-and-fusion.md  phase-3-matmul-tiling-and-autotune.md  phase-4-norm-attention-and-composition.md  phase-5-debugging-profiling-and-performance-engineering.md  phase-6-final-project-integration.md
docs/profiling/: how-to-read-a-triton-benchmark.md  (+2 more)
missions/: phase-0-bootstrap.md  phase-1-elementwise.md  phase-2-reduction-and-fusion.md  phase-3-matmul-tiling-and-autotune.md  phase-4-norm-attention-and-composition.md  phase-5-debugging-profiling-and-performance-engineering.md  phase-6-final-project.md
notes/: README.md  pitfalls.md
playground/: README.md  phase1_block_mapping_demo.py  phase1_unary_op_exercise.py  phase1_vector_add_exercise.py  phase2_reduction_exercise.py  phase2_softmax_exercise.py  phase2_softmax_steps_demo.py  phase3_autotune_exercise.py  phase3_matmul_exercise.py  phase3_tiling_demo.py  phase4_attention_flow_demo.py  phase4_norm_attention_exercise.py  phase4_target_selection_exercise.py
profiling/: profile_vector_add.py
(+39 files in other folders)
